Initial running version for VESTEC

--- a/gui/vestecSidebar.html
+++ b/gui/vestecSidebar.html
@@ -21,7 +21,9 @@
 	<div id="vestec-resizeable" class="ui-widget-content grey-text text-darken-4 resizeable">
 			<div id="vestec-editor-body" class="row">
 			    <div id="vestec-info" class="vestec-info">VESTEC</div>
-				<div id="vestec-main-page" class="vestec-main"></div>
+				<div id="vestec-main-page" class="vestec-main">
+					<iframe id="vestec-system" class="vestec-ui" frameborder="2"></iframe>
+				</div>
 			</div>
 	</div>
 </body>
