--- a/gui/vestecSidebar.html
+++ b/gui/vestecSidebar.html
@@ -6,26 +6,41 @@
     <meta charset="utf-8">
 
 	<!-- Styles-->
-	<link type="text/css" rel="stylesheet" href="third-party/css/jquery-ui.min.css" />
+	<link type="text/css" rel="stylesheet" href="third-party/css/bootstrap.min.css" />
+    <link type="text/css" rel="stylesheet" href="third-party/css/bootstrap-select.min.css" />
+	<link type="text/css" rel="stylesheet" href="third-party/css/jquery-ui.min.css"/>
 	<link type="text/css" rel="stylesheet" href="css/vestec.css" />
+	<link type="text/css" rel="stylesheet" href="css/gui.css" />
 
 	
     <script type="text/javascript" src="third-party/js/jquery-2.2.3.min.js"></script>
-    <script type="text/javascript" src="third-party/js/d3.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/alight@0.14.1/alight.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3@4.10.2/build/d3.min.js"></script>
 	<script type="text/javascript" src="third-party/js/jquery-ui.min.js"></script>
-
+	<script type="text/javascript" src="third-party/js/d3-node-editor.js"></script>
+	
+	<script type="text/javascript" src="third-party/js/bootstrap.bundle.min.js"></script>
+	<script type="text/javascript" src="third-party/js/bootstrap-select.min.js"></script>
+	
 	<script src="js/vestec.js"></script>
 </head>
 
 <body>
-	<div id="vestec-resizeable" class="ui-widget-content grey-text text-darken-4 resizeable">
+	<div id="floweditor-resizeable" class="ui-widget-content grey-text text-darken-4 resizeable">
+		<div id="node-editor-body" class="node-editor-container row">
+			<i id="minimize" class="material-icons minimize">picture_in_picture</i>
+			<div id="vestec-info" class="vestec-info">NodeEditor</div>
+			<div id="d3-node-editor" class="node-editor"></div>
+		</div>
+	</div>
+	<!--<div id="vestec-resizeable" class="ui-widget-content grey-text text-darken-4 resizeable">
 			<div id="vestec-editor-body" class="row">
 			    <div id="vestec-info" class="vestec-info">VESTEC</div>
 				<div id="vestec-main-page" class="vestec-main">
 					<iframe id="vestec-system" class="vestec-ui" frameborder="2"></iframe>
 				</div>
 			</div>
-	</div>
+	</div>-->
 </body>
 
 </html>
