--- a/gui/vestecWindow.html
+++ b/gui/vestecWindow.html
@@ -9,6 +9,7 @@
 	<link type="text/css" rel="stylesheet" href="third-party/css/bootstrap.min.css" />
     <link type="text/css" rel="stylesheet" href="third-party/css/bootstrap-select.min.css" />
 	<link type="text/css" rel="stylesheet" href="third-party/css/jquery-ui.min.css"/>
+	<link type="text/css" rel="stylesheet" href="third-party/css/nouislider.css"/>
 	<link type="text/css" rel="stylesheet" href="css/vestec.css" />
 	<link type="text/css" rel="stylesheet" href="css/gui.css" />
 
@@ -21,6 +22,7 @@
 
 	<script type="text/javascript" src="third-party/js/bootstrap.bundle.min.js"></script>
 	<script type="text/javascript" src="third-party/js/bootstrap-select.min.js"></script>
+	<script type="text/javascript" src="third-party/js/nouislider.min.js"></script>
 	
 	<script src="js/vestec.js"></script>
 </head>
