:wrench: Only use local javascript libraries

--- a/gui/vestecWindow.html
+++ b/gui/vestecWindow.html
@@ -15,8 +15,8 @@
 
 	
     <script type="text/javascript" src="third-party/js/jquery-2.2.3.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/alight@0.14.1/alight.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/d3@4.10.2/build/d3.min.js"></script>
+	<script type="text/javascript" src="third-party/js/alight.min.js"></script>
+	<script type="text/javascript" src="third-party/js/d3.min.js"></script>
 	<script type="text/javascript" src="third-party/js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="third-party/js/d3-node-editor.js"></script>
 
