--- a/gui/vestecWindow.html
+++ b/gui/vestecWindow.html
@@ -1,59 +1,25 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<div id="floweditor-resizeable" class="ui-widget-content grey-text text-darken-4 resizeable">
+	<div id="vestec-container" class="vestec-container">
+		<!-- Navigation header -->
+		<nav>
+			<div class="row nav nav-tabs" id="vestec-tabs" role="tablist">
+				<a class="nav-item nav-link active" id="nav-vestec-portal-tab" data-toggle="tab" href="#nav-vestec-portal" role="tab" aria-controls="nav-vestec-portal" aria-selected="active">VESTEC Portal</a>
+				<a class="nav-item nav-link" id="nav-node-editor-tab" data-toggle="tab" href="#nav-node-editor" role="tab" aria-controls="nav-node-editor" aria-selected="">VESTEC Data Analysis</a>
+			</div>
+			<i id="minimize" class="material-icons minimize">picture_in_picture</i>
+		</nav>
+		<!-- Tabs content -->
+		<div class="vestec-tabs row" id="nav-tabContents">
+			<!-- VESTEC Portal Tab -->
+			<div class="tab-pane vestec-tab-content fade show active" id="nav-vestec-portal" role="tabpanel" aria-labelledby="nav-vestec-portal-tab">
+				<!--	-disable-site-isolation-trials -->
+				<iframe id="vestec-system" class="vestec-ui vestec-portal" frameborder="2"></iframe>
+			</div>
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8">
-
-	<!-- Styles-->
-	<link type="text/css" rel="stylesheet" href="third-party/css/bootstrap.min.css" />
-    <link type="text/css" rel="stylesheet" href="third-party/css/bootstrap-select.min.css" />
-	<link type="text/css" rel="stylesheet" href="third-party/css/jquery-ui.min.css"/>
-	<link type="text/css" rel="stylesheet" href="third-party/css/nouislider.css"/>
-	<link type="text/css" rel="stylesheet" href="css/vestec.css" />
-	<link type="text/css" rel="stylesheet" href="css/gui.css" />
-
-	
-    <script type="text/javascript" src="third-party/js/jquery-2.2.3.min.js"></script>
-	<script type="text/javascript" src="third-party/js/alight.min.js"></script>
-	<script type="text/javascript" src="third-party/js/d3.min.js"></script>
-	<script type="text/javascript" src="third-party/js/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="third-party/js/d3-node-editor.js"></script>
-
-	<script type="text/javascript" src="third-party/js/bootstrap.bundle.min.js"></script>
-	<script type="text/javascript" src="third-party/js/bootstrap-select.min.js"></script>
-	<script type="text/javascript" src="third-party/js/nouislider.min.js"></script>
-	<script type="text/javascript" src="third-party/js/vtk_13.7.1.js"></script>
-
-	<script src="js/vestec.js"></script>
-</head>
-
-<body>
-	<div id="floweditor-resizeable" class="ui-widget-content grey-text text-darken-4 resizeable">
-		<div id="vestec-container" class="vestec-container">
-			<!-- Navigation header -->
-			<nav>
-				<div class="row nav nav-tabs" id="vestec-tabs" role="tablist">
-					<a class="nav-item nav-link active" id="nav-vestec-portal-tab" data-toggle="tab" href="#nav-vestec-portal" role="tab" aria-controls="nav-vestec-portal" aria-selected="active">VESTEC Portal</a>
-					<a class="nav-item nav-link" id="nav-node-editor-tab" data-toggle="tab" href="#nav-node-editor" role="tab" aria-controls="nav-node-editor" aria-selected="">VESTEC Data Analysis</a>
-				</div>
-				<i id="minimize" class="material-icons minimize">picture_in_picture</i>
-			</nav>
-			<!-- Tabs content -->
-			<div class="vestec-tabs row" id="nav-tabContents">
-				<!-- VESTEC Portal Tab -->
-				<div class="tab-pane vestec-tab-content fade show active" id="nav-vestec-portal" role="tabpanel" aria-labelledby="nav-vestec-portal-tab">
-					<!--	-disable-site-isolation-trials -->
-					<iframe id="vestec-system" class="vestec-ui vestec-portal" frameborder="2"></iframe>
-				</div>
-
-				<!-- Data Analytics Tab -->
-				<div class="tab-pane vestec-tab-content fade" id="nav-node-editor" role="tabpanel" aria-labelledby="nav-node-editor-tab">
-					<div id="d3-node-editor" class="node-editor"></div>
-				</div>			
+			<!-- Data Analytics Tab -->
+			<div class="tab-pane vestec-tab-content fade" id="nav-node-editor" role="tabpanel" aria-labelledby="nav-node-editor-tab">
+				<div id="d3-node-editor" class="node-editor"></div>
 			</div>
 		</div>
 	</div>
-</body>
-
-</html>
+</div>
