:wrench: Update css class

--- a/gui/vestec_tab.html
+++ b/gui/vestec_tab.html
@@ -40,7 +40,7 @@
 
 <div class="row hideable mb-3 invisible" id="vestec-logout-row">
     <div class="col-12">
-        <button class="btn light-glass w-100" id="vestec-logout-btn">Logout</button>
+        <button class="btn glass w-100" id="vestec-logout-btn">Logout</button>
     </div>
 </div>
 
