:wrench: Set duration type to number

--- a/gui/vestec_incident_window.html
+++ b/gui/vestec_incident_window.html
@@ -11,7 +11,7 @@
 			<form class="p-4">
 				<div class="form-group">
 					<label for="csp-vestec-incident-workflow">Workflow</label>
-					<select class="form-control simple-value-dropdown" id="csp-vestec-incident-workflow" data-callback="csp-vestec-incident-workflow" required>
+					<select class="form-control _simple-value-dropdown" id="csp-vestec-incident-workflow" data-callback="csp-vestec-incident-workflow" required>
 						<option>---</option>
 					</select>
 				</div>
@@ -43,7 +43,7 @@
 				
 				<div class="form-group">
 					<label for="csp-vestec-incident-duration">Duration (optional)</label>
-					<input type="text" class="form-control" id="csp-vestec-incident-duration">
+					<input type="number" class="form-control" id="csp-vestec-incident-duration">
 				</div>
 
 				<button type="submit" class="btn glass w-100" style="height: 30px" id="csp-vestec-incident-submit">Create incident</button>
