:hammer: Init selectpicker on workflow select

--- a/gui/vestec_incident_window.html
+++ b/gui/vestec_incident_window.html
@@ -11,8 +11,7 @@
 			<form class="p-4">
 				<div class="form-group">
 					<label for="csp-vestec-incident-workflow">Workflow</label>
-					<select class="form-control _simple-value-dropdown" id="csp-vestec-incident-workflow" data-callback="csp-vestec-incident-workflow" required>
-						<option>---</option>
+					<select class="form-control simple-value-dropdown" id="csp-vestec-incident-workflow" data-callback="csp-vestec-incident-workflow" required>
 					</select>
 				</div>
 
