:wrench: Fix incident workflow dropdown

--- a/gui/vestec_incident_window.html
+++ b/gui/vestec_incident_window.html
@@ -11,7 +11,7 @@
 			<form class="p-4">
 				<div class="form-group">
 					<label for="csp-vestec-incident-workflow">Workflow</label>
-					<select class="form-control simple-value-dropdown" id="csp-vestec-incident-workflow" data-callback="csp-vestec-incident-workflow" required>
+					<select style="width: 100%" id="csp-vestec-incident-workflow" data-callback="csp-vestec-incident-workflow" required>
 					</select>
 				</div>
 
