:wrench: Add region to incident create form

--- a/gui/vestec_incident_window.html
+++ b/gui/vestec_incident_window.html
@@ -60,6 +60,11 @@
 					<input type="text" class="form-control" id="csp-vestec-incident-interest-disease">
 				</div>
 
+				<div class="form-group">
+					<label for="csp-vestec-incident-interest-region">Region of Interest (optional)</label>
+					<input type="text" class="form-control" id="csp-vestec-incident-interest-region">
+				</div>
+
 				<button type="submit" class="btn glass w-100" style="height: 30px" id="csp-vestec-incident-submit">Create incident</button>
 			</form>
 		</div>
