:sparkles: Add Boundingbox Tool

--- a/gui/vestec_incident_window.html
+++ b/gui/vestec_incident_window.html
@@ -25,7 +25,6 @@
 					<div class="input-group mb-3">
 						<input type="text" class="form-control" aria-label="Upper left Lat/Long (optional)" id="csp-vestec-incident-upper-left">
 						<div class="input-group-append">
-							<button class="btn btn-outline-secondary" type="button" id="csp-vestec-incident-select-upper-left" title="Use current observer position"><i class="material-icons">location_searching</i></button>
 						</div>
 					</div>
 				</div>
@@ -34,9 +33,14 @@
 					<label for="csp-vestec-incident-lower-right">Lower right Lat/Long (optional)</label>
 					<div class="input-group mb-3">
 						<input type="text" class="form-control" aria-label="Lower right Lat/Long (optional)" id="csp-vestec-incident-lower-right">
-						<div class="input-group-append">
-							<button class="btn btn-outline-secondary" type="button" id="csp-vestec-incident-select-lower-right" title="Use current observer position"><i class="material-icons">location_searching</i></button>
-						</div>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="input-group mb-3">
+						<button class="btn btn-outline-secondary btn-block" type="button" id="csp-vestec-incident-select-upper-left">
+							<i class="material-icons">location_searching</i> Define using Bounding Box
+						</button>
 					</div>
 				</div>
 				
